--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-certifi==2024.7.4
-charset-normalizer==3.3.2
-idna==3.7
+selenium==4.23.1
 requests==2.32.3
-urllib3==2.2.2
+packaging==24.1
+webdriver-manager==4.0.2
+flask-restful==0.3.10
+gunicorn==22.0.0
