--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 selenium==4.23.1
 requests==2.32.3
 packaging==24.1
-gevent==24.2.1
+imap-tools==1.7.2
 webdriver-manager==4.0.2
 flask-restful==0.3.10
 gunicorn==22.0.0
